tests/errors/long.h
static          long a;
static   signed long a;
static unsigned long a;

static          long int a;
static   signed long int a;
static unsigned long int a;
